@@ -46,18 +46,18 @@ int	getPROC(char *file,int lineno,int fieldno, double *value);
 int	BUFFERSMEM(const char *cmd, const char *parameter,double  *value);
 int	CACHEDMEM(const char *cmd, const char *parameter,double  *value);
 
-int	CPUIDLE1(const char *cmd, const char *parameter,double  *value);
-int	CPUIDLE5(const char *cmd, const char *parameter,double  *value);
-int	CPUIDLE15(const char *cmd, const char *parameter,double  *value);
-int	CPUUSER1(const char *cmd, const char *parameter,double  *value);
-int	CPUUSER5(const char *cmd, const char *parameter,double  *value);
-int	CPUUSER15(const char *cmd, const char *parameter,double  *value);
-int	CPUNICE1(const char *cmd, const char *parameter,double  *value);
-int	CPUNICE5(const char *cmd, const char *parameter,double  *value);
-int	CPUNICE15(const char *cmd, const char *parameter,double  *value);
-int	CPUSYSTEM1(const char *cmd, const char *parameter,double  *value);
-int	CPUSYSTEM5(const char *cmd, const char *parameter,double  *value);
-int	CPUSYSTEM15(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_IDLE1(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_IDLE5(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_IDLE15(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_USER1(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_USER5(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_USER15(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_NICE1(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_NICE5(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_NICE15(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_SYS1(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_SYS5(const char *cmd, const char *parameter,double  *value);
+int	SYSTEM_CPU_SYS15(const char *cmd, const char *parameter,double  *value);
 
 int	DISKTOTAL(const char *cmd, const char *mountPoint,double  *value);
 int	DISKFREE(const char *cmd, const char *mountPoint,double  *value);
